--- a/view/header.html
+++ b/view/header.html
@@ -7,5 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login System</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <script src='https://www.google.com/recaptcha/api.js'></script>
     <script src="assets/js/bootstrap.min.js"></script>
 </head>
